# personaOS

./: .gitignore  BuildInstruct.md  Cargo.toml  Makefile  README.md  rust-toolchain.toml
bootloader/: Cargo.toml
bootloader/src/: main.rs
changelog/: 0001-ripple.md  0002-stillwater.md  0003-deep-current.md  0004-spring-tide.md  0005-reflection-pool.md  0006-moonlit-harbor.md  manifest.json
docs/design/: architecture.md  boot-protocol.md
docs/patch-notes/: app.js  index.html  md.js  style.css
kernel/: Cargo.toml  kernel.ld  x86_64-personaos-kernel.json
kernel/.cargo/: config.toml
kernel/src/: main.rs  panic.rs  syscall.rs
kernel/src/arch/x86_64/: acpi.rs  apic.rs  gdt.rs  idt.rs  mod.rs  pic.rs  syscall.rs
kernel/src/drivers/: ac97.rs  block.rs  e1000.rs  framebuffer.rs  mod.rs  ps2.rs  serial.rs  virtio_gpu.rs
kernel/src/drivers/framebuffer/: font.rs
kernel/src/drivers/nvme/: mod.rs
kernel/src/drivers/pci/: config.rs  mod.rs
kernel/src/fs/: elf.rs  mod.rs  ramfs.rs
kernel/src/fs/pondfs/: layout.rs  mod.rs
kernel/src/ipc/: cap.rs  cap_table.rs  mod.rs  port.rs  registry.rs  syscalls.rs
kernel/src/mm/: heap.rs  mod.rs  pmm.rs  vmm.rs
kernel/src/sched/: mod.rs  task.rs
kernel/src/user/: mod.rs
libs/libpersona/: Cargo.toml
libs/libpersona/src/: lib.rs
libs/lily/: Cargo.toml
libs/lily/src/: lib.rs
libs/shared/: Cargo.toml
libs/shared/src/: boot_info.rs  lib.rs
libs/skipstone/: Cargo.toml
libs/skipstone/src/: lib.rs
tools/: bootstrap-host.sh  gen-changelog-manifest.py  gen-changelog-manifest.sh  mkdisk.sh  run-qemu.sh
tools/mkpondfs/: Cargo.toml
tools/mkpondfs/src/: main.rs
user/audiod/: Cargo.toml  user.ld
user/audiod/src/: main.rs
user/depth/: Cargo.toml
user/depth/src/: main.rs
user/desktop/: Cargo.toml
user/desktop/src/: main.rs
user/drift/: Cargo.toml
user/drift/src/: main.rs
user/init/: Cargo.toml  user.ld
user/init/src/: main.rs
user/netd/: Cargo.toml
user/netd/src/: main.rs
user/reflection/: Cargo.toml
user/reflection/src/: main.rs
user/shore/: Cargo.toml
user/shore/src/: main.rs
user/skim/: Cargo.toml
user/skim/src/: main.rs
user/stones/: Cargo.toml  x86_64-personaos-user.json
user/stones/src/: main.rs
user/surface-demo/: Cargo.toml
user/surface-demo/.cargo/: config.toml
user/surface-demo/src/: main.rs
user/tide/: Cargo.toml
user/tide/src/: main.rs
user/vfsd/: Cargo.toml
user/vfsd/src/: main.rs
