[package]
name = "kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
persona-shared = { workspace = true }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex", "once"] }
linked_list_allocator = { version = "0.10", features = ["use_spin"] }
x86_64 = { version = "0.15", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
bitflags = { version = "2", default-features = false }
xmas-elf = { version = "0.9", default-features = false }

[package.metadata.docs.rs]
default-target = "x86_64-personaos-kernel"
