[workspace]

[package]
name = "surface-demo"
version = "0.1.0"
edition = "2021"
authors = ["personaOS contributors"]
license = "MIT OR Apache-2.0"

[dependencies]
libpersona = { path = "../../libs/libpersona" }
lily = { path = "../../libs/lily" }
skipstone = { path = "../../libs/skipstone" }

[[bin]]
name = "surface-demo"
path = "src/main.rs"

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
opt-level = 2
lto = false
codegen-units = 1
